<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".act.BasicUsageActivity">

    <TextView
        android:text="@string/show_result"
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="clickMe"
        android:text="@string/click_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_name"
        android:hint="@string/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:onClick="showName"
        android:text="@string/show_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>