<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:paddingTop="10dp"
              android:paddingBottom="10dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_name"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_age"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</LinearLayout>